SONAR-22224 Add prioritizedRule to issue/search api